--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ add_definitions(-DGLM_FORCE_RADIANS)
 
 find_package(PNG REQUIRED)
 
-list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Weverything -Wno-c++98-compat -Wno-shadow -pedantic -g -O0 -march=native")
-# list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Weverything -Wno-c++98-compat -Wno-shadow -pedantic -O3 -march=native")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native")
+set(CMAKE_CXX_FLAGS_DEBUG "-g -O0")
+list(APPEND CMAKE_CXX_FLAGS "-std=c++11 -Weverything -Wno-c++98-compat -Wno-shadow -pedantic -march=native")
 
 set(libs
 	${PNG_LIBRARIES}
